[i18n fixit] Fixing preferences search box width.
BUG=Placeholder text is truncated in many languages.
TEST=Placeholder text is truncated in less languages.


Review URL: http://codereview.chromium.org/9187075

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@117767 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: 1558fff3237b89156cb0c91a693122131533c286

--- a/chrome/browser/resources/options/options_page.css
+++ b/chrome/browser/resources/options/options_page.css
@@ -20,6 +20,11 @@
 #search-field {
   font-size: inherit;
   margin: 0;
+  width: 100%;
+}
+
+#searchPageNav {
+  -webkit-padding-start: 20px;
 }
 
 /*
